home page series - updated

--- a/src/Pages/Home/switchable/series.css
+++ b/src/Pages/Home/switchable/series.css
@@ -1,7 +1,11 @@
-#series-list {
+.series-list {
   display: grid;
   justify-content: space-around;
   row-gap: 20px;
   column-gap: 5px;
   grid-template-columns: repeat(auto-fill, minmax(100px, 200px));
+}
+
+.has-error {
+  display: block;
 }
